# snake

./: CMakeLists.txt  README.org  conanfile.py  conanfile.txt  shell.nix
src/: CMakeLists.txt  README.org  main.cpp  snake.cpp
src/Actor/: Actor.hpp  Snake.cpp  Snake.hpp
src/Drawer/: Drawer.cpp  Drawer.hpp  EndDrawer.cpp  EndDrawer.hpp  GameplayDrawer.cpp  GameplayDrawer.hpp  LogoDrawer.cpp  LogoDrawer.hpp  TitleDrawer.cpp  TitleDrawer.hpp
src/Game/: Game.hpp  StandardGame.cpp  StandardGame.hpp
src/Scenario/: PlainScenario.cpp  PlainScenario.hpp  Scenario.hpp
src/core/: README.org  actor.cpp  actor.hpp  game.cpp  game.hpp  scenario.cpp  scenario.hpp
